Fixed line color in dark mode

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,6 +21,7 @@
   --scrollbar: #626567;
   --light-grey: #565656;
   --border: #565656;
+  --line: #565656;
   --text: #f0f3f4;
   --blue: #3498db;
   --link-blue: #3498db;
